cmake_minimum_required(VERSION 3.19)
project(sem3lab2)

set(CMAKE_CXX_STANDARD 14)

add_executable(sem3lab2 main.cpp ArraySequence.h DynamicArray.h Sequence.h BST.h Dictionary.h Histogram.h LinkedList.h ListSequence.h SearchOftenSub.h SparseVector.h menu.h sorts.h testBST.h testDictionary.h testHistogram.h testSearchOftenSub.h testSorts.h testSparceVector.h)